--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "axios": "^1.6.8",
+    "@react-three/drei": "^9.56.4",
+    "@react-three/fiber": "^8.15.12",
+    "axios": "^1.11.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
+    "three": "^0.158.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
